updated extensions